Fix overflow issue

--- a/assets/theme/clixtv/src/ui/app.less
+++ b/assets/theme/clixtv/src/ui/app.less
@@ -69,7 +69,7 @@
 @import "common/checkbox/checkbox";
 @import "common/tooltip/tooltip";
 
-body {
+body, html {
     background-color: @color-darker-gray;
     max-width: 100%;
     overflow-x: hidden;
